# PlayReadingAssistant

./: Cargo.toml  run.sh
.sqlx/: query-16d0de6c50986bd5375ef405d6ade4831e2f23ffc826e5245ff61cd6286589ad.json  query-81fdf557d38b3b923b68316ce3e9f0ee7346621f773f431b58ed1a223841317c.json  query-8f8a30bbe8369c2b160c8bc0674f35a13612998653447ba98c280161ba4aa649.json  query-938274f5cad796631a301a32f97d07c77bd366ace0fef3b9ca798aeef4cf2bd8.json  query-e9b96c056f0a4c4915501b25fbf9ba238a34e6704114250a6134b774d72ce09d.json  query-ef13ba3bf243fa61d3ed9b1664fdc6ea1e2d1c910bf786c3b792af1ac5ceb1da.json  query-f48b01275b03da0ef8944106553969d55027d8b4ad7ff5efea8309fb5a92ec5c.json
src/: reading_dots.rs
