[package]
name = "play_reading_party"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "play_reading_party"

[dependencies]
actix-web = "4.7.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "any", "postgres"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15.7"
actix-web-lab = "0.20.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"]}

[dev-dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
